Don't close issues marked "no stale" as part of closing stale PRs
actions/stale is the worst.

--- a/.github/workflows/close-stale-prs.yaml
+++ b/.github/workflows/close-stale-prs.yaml
@@ -18,6 +18,7 @@ jobs:
         days-before-pr-stale: 30
         days-before-close: 7
         stale-pr-label: stale
+        exempt-issue-labels: 'no stale'
         exempt-pr-labels: 'no stale'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         operations-per-run: 300
