--- a/.github/workflows/compatibility-tests.yaml
+++ b/.github/workflows/compatibility-tests.yaml
@@ -187,7 +187,7 @@ jobs:
         if: ${{ failure() }}
         continue-on-error: true
         working-directory: test/spark
-        run: docker-compose logs --tail=15000 lakefs
+        run: docker compose logs --tail=15000 lakefs
 
   compatibility-checks-server:
     name: Test lakeFS server FileSystem compatibility
@@ -272,7 +272,7 @@ jobs:
         if: ${{ failure() }}
         continue-on-error: true
         working-directory: test/spark
-        run: docker-compose logs --tail=15000 lakefs
+        run: docker compose logs --tail=15000 lakefs
 
   notify-slack:
     name: Notify slack on workflow failures
