--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -561,6 +561,7 @@ jobs:
       - name: Test rclone export
         env:
           EXPORT_LOCATION: s3://esti-system-testing/${{ github.run_number }}-rclone-export-dest/${{ steps.unique.outputs.value }}
+          WORKING_DIRECTORY: test/rclone_export
           AWS_ACCESS_KEY_ID: ${{ secrets.ESTI_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }}
         working-directory: test/rclone_export
