--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -481,6 +481,7 @@ jobs:
           LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY: ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }}
 
       - name: Spark${{ matrix.spark.tag }} + S3 gateway
+        timeout-minutes: 8
         working-directory: test/spark
         run: |
           python ./run-test.py \
@@ -504,21 +505,22 @@ jobs:
             --access_mode hadoopfs \
             --aws_access_key ${{ secrets.ESTI_AWS_ACCESS_KEY_ID }} \
             --aws_secret_key ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }}
+      - name: lakeFS Logs on HadoopFS test failure
+        if: ${{ failure() }}
+        continue-on-error: true
+        working-directory: test/spark
+        run: docker-compose logs --tail=2500 lakefs      
 
-      - name: Spark${{ matrix.spark.tag }} + lakeFS HadoopFS + Redirect
+      - name: Spark${{ matrix.spark.tag }} + lakeFS GW + Redirect
         timeout-minutes: 8
         working-directory: test/spark
         run: |
           python ./run-test.py \
-            --storage_namespace s3://esti-system-testing/${{ github.run_number }}-spark${{ matrix.spark.tag }}-redirect/${{ steps.unique.outputs.value }} \
-            --repository lakefsfs-redirect-test-spark \
+            --storage_namespace s3://esti-system-testing/${{ github.run_number }}-spark${{ matrix.spark.tag }}-gw-redirect/${{ steps.unique.outputs.value }} \
+            --repository gateway-redirect-test-spark${{ matrix.spark.tag }} \
             --sonnet_jar ${{ matrix.spark.sonnet_jar }} \
-            --access_mode hadoopfs \
-            --aws_access_key ${{ secrets.ESTI_AWS_ACCESS_KEY_ID }} \
-            --aws_secret_key ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }} \
             --redirect
-
-      - name: lakeFS Logs on HadoopFS test failure
+      - name: lakeFS Logs on Spark with gateway redirect failure
         if: ${{ failure() }}
         continue-on-error: true
         working-directory: test/spark
