--- a/webui/package.json
+++ b/webui/package.json
@@ -18,7 +18,6 @@
     "typesync": "typesync"
   },
   "dependencies": {
-    "@beeswax/react-markdown-async": "9.0.1",
     "@duckdb/duckdb-wasm": "^1.28.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -42,10 +41,15 @@
     "react-router-dom": "^6.20.1",
     "react-simple-code-editor": "^0.13.1",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
+    "rehype-wrap": "^1.1.0",
     "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "unified": "^11.0.4",
     "unist-util-visit": "^4.1.2",
     "usehooks-ts": "^2.9.1",
     "validator": "^13.11.0"
@@ -77,7 +81,6 @@
     "sass": "^1.69.5",
     "typescript": "^5.3.3",
     "typesync": "^0.11.1",
-    "unified": "^10.1.2",
     "vite": "^5.2.8",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^1.5.0"
